2003-02-10  Bastien Nocera  <hadess@hadess.net>

	* data/schemas.sh: disable thumbnailing of the audio types, run that
	if your system still tries to thumbnail audio files

2003-02-08  Pauli Virtanen  <pauli.virtanen@hut.fi>

	* configure.in: Added "fi" (Finnish) to ALL_LINGUAS.

2003-02-07  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade:
	* src/totem.c: (on_repeat_mode1_toggled),
	(playlist_repeat_toggle_cb), (totem_callback_connect): added repeat
	menu item under View (Closes: #104450)

2003-02-07  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade: move the Properties menu item to the File menu,
	according to the HIG (Closes: #104452)

2003-02-07  Bastien Nocera  <hadess@hadess.net>

	* data/totem.schemas.in:
	* src/bacon-message-connection.c: (bacon_message_connection_free):
	updated from libbacon
	* src/totem.c: (totem_action_exit), (totem_action_remote),
	(totem_button_pressed_remote_cb),
	(totem_message_connection_receive_cb), (process_command_line),
	(main): added plenty of command-line options to control an already
	launched totem, enqueue is the default action, only one instance of
	totem can be launched at a time (Closes: #94410)

2003-02-07  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am:
	* src/bacon-message-connection.[ch]:
	* src/totem-remote.h:
	* src/totem.c: (totem_message_connection_receive_cb),
	(process_command_line), (main): added BaconMessageConnection stuff,
	did client-side implementation, added 2 new types of
	TotemRemoteCommands

2003-02-06  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (gtk_xine_class_init), (gtk_xine_set_property),
	(gtk_xine_get_property), (gtk_xine_get_position):
	* src/gtk-xine.h: removed the set_audio_channel and associated, we
	don't use or need them

2003-02-06  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (gtk_xine_set_media_device):
	* src/totem.c: (totem_setup_preferences): fix setting the media
	device, yet again

2003-02-06  Bastien Nocera  <hadess@hadess.net>
