@@ -1,5 +1,5 @@
 /* 
- * Copyright (C) 2001-2002 Bastien Nocera <hadess@hadess.net>
+ * Copyright (C) 2001,2002,2003 Bastien Nocera <hadess@hadess.net>
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
