@@ -1,5 +1,12 @@
 2003-02-10  Bastien Nocera  <hadess@hadess.net>
 
+	* src/bacon-message-connection.c:
+	* src/bacon-message-connection.h: upd from libbacon
+	* src/egg-recent-model.c: (egg_recent_model_read): fix a leak
+	* src/totem.c: upd copyright
+
+2003-02-10  Bastien Nocera  <hadess@hadess.net>
+
 	* data/schemas.sh: disable thumbnailing of the audio types, run that
 	if your system still tries to thumbnail audio files
 
